RESOLVED FIXED122774
Windows popup menu does not reselect last selected index when clicking on a disabled option
https://bugs.webkit.org/show_bug.cgi?id=122774
Summary Windows popup menu does not reselect last selected index when clicking on a d...
Roger Fong
Reported 2013-10-14 12:52:21 PDT
<rdar://problem/6138855> Right now we set the selected item to the last focused element (which is the last element the user focused on via either mouse or keyboard interaction). It should just go to the previously selected item if we click on a disabled option (this is to match behavior on mac)
Attachments
patch (3.79 KB, patch)
2013-10-14 13:04 PDT, Roger Fong
bfulgham: review+
Roger Fong
Comment 1 2013-10-14 13:04:43 PDT
Brent Fulgham
Comment 2 2013-10-14 13:24:58 PDT
Comment on attachment 214183 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=214183&action=review Looks good to me. I wonder if we will mess up WINCE at all with the movement of the "setFocusedIndex" logic to inside the #if !OS(WINCE) block. > Source/WebCore/platform/win/PopupMenuWin.cpp:167 > + } Do you think this block is needed by WINCE?
Roger Fong
Comment 3 2013-10-14 14:15:52 PDT
Oops. Didn't notice that I had put that there. I'll move it out though just to be safe.
Roger Fong
Comment 4 2013-10-14 15:52:44 PDT
mitz
Comment 5 2013-11-02 11:05:14 PDT
*** Bug 18358 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.