https://bugs.webkit.org/show_bug.cgi?id=122774. <rdar://problem/6138855>.

Reviewed by Brent Fulgham.

Add a field to keep track of hovered over index.
Use index to determine whether or not to use the existing selected index on the mouse down event.

* platform/win/PopupMenuWin.cpp:
(WebCore::PopupMenuWin::PopupMenuWin):
(WebCore::PopupMenuWin::show):
(WebCore::PopupMenuWin::wndProc):
* platform/win/PopupMenuWin.h:


Canonical link: https://commits.webkit.org/140892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157423 268f45cc-cd09-0410-ab3c-d52691b4dbfc